test/ill-formed/0179_incomplete_struct_params_assign.c
struct s;
void f (struct s *x, struct s *y)
{
  *x = *y;
}
